--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -31,7 +31,7 @@ jobs:
   test:
     name: Unit test
     runs-on: ubuntu-latest
-    needs: lint
+    needs: cache
     strategy:
       matrix:
         python-version: [3.8]
