--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -19,6 +19,10 @@ jobs:
         uses: actions/setup-python@v2
         with:
           python-version: ${{ matrix.python-version }}
+      - uses: actions/setup-go@v2
+        with:
+          go-version: '^1.16.0'
+      - run: go version
       - name: cache
         id: cache
         uses: actions/cache@v2
