--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -3,7 +3,6 @@ name: RunAwsTerraformTests
 on: [push, pull_request]
 
 jobs:
-  # Install and cache dependencies
   cache:
     name: Caching
     runs-on: ubuntu-latest
@@ -35,7 +34,7 @@ jobs:
           bin/install-aws-test
 
   test:
-    name: Unit test
+    name: Test
     runs-on: ubuntu-latest
     needs: cache
     strategy:
@@ -54,7 +53,7 @@ jobs:
     - name: cache
       uses: actions/cache@v2
       with:
-        path: ${{ steps.cache.outputs.dir }}
+        path: '~/.cache'
         key: 'awstestcache'
     - name: Install project dependencies
       run: |
