--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -60,7 +60,7 @@ jobs:
         python -m pip install --upgrade pip
     - name: Test
       run: |
-        bin/run-tests TestAccAWS
+        bin/run-tests -e moto-tests.excl.txt TestAccAWS
     - name: "Create report"
       run: |
         bin/create-report
